# cpp_alpine_hot_loading

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: auto-chmod.sh  config.sh  initial-setup.sh  setup-permissions.sh  watch-permissions.sh
cpp/: CMakeLists.txt  README.md  build.sh  conanfile.txt  rebuild_plugin.sh
scripts/: build.sh  build_old.sh  rebuild_plugin.sh
src/: main.cpp
src/core/: DynamicLoader.cpp  DynamicLoader.hpp  FileMonitor.cpp  FileMonitor.hpp  Logger.hpp  Plugin.hpp  PluginManager.cpp  PluginManager.hpp
src/plugins/endpoints/: EndpointPlugin.hpp  HelloEndpoint.cpp  HelloEndpoint.hpp
